# MGBrain

./: .gitignore  CMakeLists.txt  README.md
analysis/: plot_01_sim.py  plot_02_speedup.py  plot_03_single.py  plot_04_opart_ratio.py  plot_05_opart_sd.py  plot_06_part.py  plot_memory.py
bench/: CMakeLists.txt  correct_brunel.cpp  correct_vogel.cpp  opart_brunel.cpp  opart_vogel.cpp  part_brunel.cpp  part_vogel.cpp  sim_brunel.cpp  sim_vogel.cpp  single_brunel.cpp  single_vogel.cpp  test1.cpp  test_const.cpp  test_gen.cpp  test_parser.cpp  test_sim.cpp  test_sim_brunel.cpp  test_sim_vogel.cpp
benchdata/: memory.txt  single.txt  single2.txt  single3.txt  speedup.txt  tmp.txt
benchdata/opart/: opart_brunel.txt  opart_vogel.txt  opart_vogel2.txt
benchdata/part/: mgbrain_part_brunel.txt  mgbrain_part_brunel_200m.txt  mgbrain_part_brunel_400m.txt  mgbrain_part_brunel_600m.txt  mgbrain_part_vogels_200m.txt  mgbrain_part_vogels_400m.txt  mgbrain_part_vogels_600m.txt
benchdata/sim/: mgbrain_brunel_1.txt  mgbrain_brunel_2.txt  mgbrain_brunel_4.txt  mgbrain_brunel_8.txt  mgbrain_vogel_8.txt
benchdata/single/: mgbrain_brunel_1000000000.nvprof.txt  mgbrain_brunel_100000000_nvprof.txt  mgbrain_brunel_10000000_nvprof.txt  mgbrain_brunel_120000000_nvprof.txt  mgbrain_brunel_140000000_nvprof.txt  mgbrain_brunel_160000000_nvprof.txt  mgbrain_brunel_180000000_nvprof.txt  mgbrain_brunel_200000000_nvprof.txt  mgbrain_brunel_20000000_nvprof.txt  mgbrain_brunel_300000000_nvprof.txt  mgbrain_brunel_30000000_nvprof.txt  mgbrain_brunel_400000000_nvprof.txt  mgbrain_brunel_40000000_nvprof.txt  mgbrain_brunel_500000000_nvprof.txt  mgbrain_brunel_50000000_nvprof.txt  mgbrain_brunel_60000000_nvprof.txt  mgbrain_brunel_70000000_nvprof.txt  mgbrain_brunel_80000000_nvprof.txt  mgbrain_brunel_90000000_nvprof.txt  mgbrain_single_brunel_120000000_0.002_nvprof.txt
benchdata/single2/: mgbrain_single_brunel_0.01_100000000_nvprof.txt  mgbrain_single_brunel_0.01_120000000_nvprof.txt  mgbrain_single_brunel_0.01_140000000_nvprof.txt  mgbrain_single_brunel_0.01_160000000_nvprof.txt  mgbrain_single_brunel_0.01_180000000_nvprof.txt  mgbrain_single_brunel_0.01_200000000_nvprof.txt  mgbrain_single_brunel_0.01_20000000_nvprof.txt  mgbrain_single_brunel_0.01_40000000_nvprof.txt  mgbrain_single_brunel_0.01_60000000_nvprof.txt  mgbrain_single_brunel_0.01_80000000_nvprof.txt  mgbrain_single_brunel_0.05_100000000_nvprof.txt  mgbrain_single_brunel_0.05_120000000_nvprof.txt  mgbrain_single_brunel_0.05_140000000_nvprof.txt  mgbrain_single_brunel_0.05_160000000_nvprof.txt  mgbrain_single_brunel_0.05_180000000_nvprof.txt  mgbrain_single_brunel_0.05_200000000_nvprof.txt  mgbrain_single_brunel_0.05_20000000_nvprof.txt  mgbrain_single_brunel_0.05_40000000_nvprof.txt  mgbrain_single_brunel_0.05_60000000_nvprof.txt  mgbrain_single_brunel_0.05_80000000_nvprof.txt  mgbrain_single_brunel_0.1_100000000_nvprof.txt  mgbrain_single_brunel_0.1_120000000_nvprof.txt  mgbrain_single_brunel_0.1_140000000_nvprof.txt  mgbrain_single_brunel_0.1_160000000_nvprof.txt  mgbrain_single_brunel_0.1_180000000_nvprof.txt  mgbrain_single_brunel_0.1_200000000_nvprof.txt  mgbrain_single_brunel_0.1_20000000_nvprof.txt  mgbrain_single_brunel_0.1_40000000_nvprof.txt  mgbrain_single_brunel_0.1_60000000_nvprof.txt  mgbrain_single_brunel_0.1_80000000_nvprof.txt
benchdata/single3/: mgbrain_single_brunel_0.01_100000000_nvprof.txt  mgbrain_single_brunel_0.01_120000000_nvprof.txt  mgbrain_single_brunel_0.01_140000000_nvprof.txt  mgbrain_single_brunel_0.01_160000000_nvprof.txt  mgbrain_single_brunel_0.01_180000000_nvprof.txt  mgbrain_single_brunel_0.01_200000000_nvprof.txt  mgbrain_single_brunel_0.01_20000000_nvprof.txt  mgbrain_single_brunel_0.01_40000000_nvprof.txt  mgbrain_single_brunel_0.01_60000000_nvprof.txt  mgbrain_single_brunel_0.01_80000000_nvprof.txt  mgbrain_single_brunel_0.05_100000000_nvprof.txt  mgbrain_single_brunel_0.05_120000000_nvprof.txt  mgbrain_single_brunel_0.05_140000000_nvprof.txt  mgbrain_single_brunel_0.05_160000000_nvprof.txt  mgbrain_single_brunel_0.05_180000000_nvprof.txt  mgbrain_single_brunel_0.05_200000000_nvprof.txt  mgbrain_single_brunel_0.05_20000000_nvprof.txt  mgbrain_single_brunel_0.05_40000000_nvprof.txt  mgbrain_single_brunel_0.05_60000000_nvprof.txt  mgbrain_single_brunel_0.05_80000000_nvprof.txt  mgbrain_single_brunel_0.1_100000000_nvprof.txt  mgbrain_single_brunel_0.1_120000000_nvprof.txt  mgbrain_single_brunel_0.1_140000000_nvprof.txt  mgbrain_single_brunel_0.1_160000000_nvprof.txt  mgbrain_single_brunel_0.1_180000000_nvprof.txt  mgbrain_single_brunel_0.1_200000000_nvprof.txt  mgbrain_single_brunel_0.1_20000000_nvprof.txt  mgbrain_single_brunel_0.1_40000000_nvprof.txt  mgbrain_single_brunel_0.1_60000000_nvprof.txt  (+1 more)
examples/: CMakeLists.txt  example.cpp
shell/: opart.sh  part.sh  rest.sh  sim.sh  single.sh  test1.sh  test2.sh
src/: CMakeLists.txt  macro.cpp  macro.h  main.cpp  mgbrain.h
src/model/: CMakeLists.txt  constgen.h  maker.h  model.cpp  model.h  netgen.cpp  netgen.h  network.cpp  network.h
src/partition/: CMakeLists.txt  analysis.cpp  analysis.h  calculator.cpp  calculator.h  metisutil.cpp  metisutil.h  parter.cpp  parter.h
src/simulator/: CMakeLists.txt  cudamem.cuh  cumap.cuh  gstruct.h  sim.h  struct.h  structure.h  ustruct.h
src/simulator/mgsim/: mgstruct.h
src/simulator/mgsim/adj/: mgcore.cu  mgcore.cuh  mgnet.cpp  mgnet.cu  mgnet.cuh  mgnet.h  mgsim.cpp  mgsim.h  mgstruct.h  spikeBuffer.cuh  spikeDenseBuffer.cuh  spikebuffer.cuh  spikebuffer.h  spikebufferd.cuh  spikebufferd.h
src/simulator/mgsim/dsm/: mgsim.h  mgstruct.h
src/simulator/mgsim/esa/: esamgnet.cu  esamgnet.cuh  esamgsim.cpp  esamgsim.h
src/simulator/mgsim/uva/: uvamgnet.cu  uvamgnet.cuh  uvamgsim.cpp  uvamgsim.h
src/simulator/scsim/: cnetwork.cpp  cnetwork.h  cneuron.h  cpop.h  csimulator.cpp  csimulator.h  csynapse.h
src/simulator/sgsim/: sgsim.cpp  sgsim.h  sgstruct.h
src/simulator/sgsim/sgnet/: sgnet.cu  sgnet.cuh
src/util/: CMakeLists.txt  logger.h  parser.h  util.cpp  util.h
test/: CMakeLists.txt  networkio.cpp
(+1 files in other folders)
